sites/all/themes/heybabies/sass/_main.scss
body
{
    color: #777;
    background: $seafoam;
}

a
{
    color: $seafoam;
}

h1, h2, h3, h4, h5, h6
{
    color: $seafoam;
    font-weight: 300;
}
h1
{
    font-size: 2.5em;
}
h2
{
    font-size: 2em;
}
h3
{
    font-size: 1.5em;
}
h4
{
    font-size: 1.25em;
}
h5, h6
{
    font-size: 1em;
}

hr
{
    height: 0;
    border: 0;
    border-bottom: 1px solid #e6e6e6;
}

p
{
    line-height: 1.5;
    margin-bottom: 0.8em;
    
    &:last-child
    {
        margin-bottom: 0;
    }
}

tr.even,
tr.odd
{
    background: none;
    border: 0;
    padding: 0;
}
td
{
    padding: 0.3em 0;
}
tbody
{
    border: 0;
}

.menu
{
    list-style: none;
    text-transform: lowercase;
}

.slick-slide
{
    outline: none;
}

.skip-link
{
    position: absolute;
    left: 50%;
    top: 0;
    width: 200px;
    margin-left: -100px;
    z-index: 1000;
    
    a
    {
        display: block;
        width: 200px;
        text-align: center;
        line-height: 2;
        background: white;
        font-weight: bold;
    }
}

.page-wrapper
{
    overflow: hidden;
    padding-top: 100px;
}

.float-right
{
    float: right;
}
.navigation
{
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    background: $seafoam;
    color: white;
    box-shadow: 0 2px 8px rgba(0,0,0,0.2);
    font-weight: 500;
    z-index: 100;
}
.navbar-fixed .navigation
{
    top: 39px;
}
.navbar-horizontal.navbar-tray-open .navigation
{
    top: 79px;
}
.navbar-vertical.navbar-tray-open .navigation
{
    left: 240px;
}

.logo
{
    float: left;
    height: 50px;
    line-height: 50px;
    padding: 0 12px;
    
    &:hover, &:focus
    {
        background-color: rgba(0,0,0,0.05)
    }
    &:active
    {
        background-color: rgba(0,0,0,0.1);
    }
    
    img
    {
        vertical-align: middle;
        -webkit-filter: drop-shadow(1px 1px 2px rgba(0,0,0,0.15));
        -moz-filter: drop-shadow(1px 1px 2px rgba(0,0,0,0.15));
        filter: drop-shadow(1px 1px 2px rgba(0,0,0,0.15));
    }
}
.menu-main-menu
{
    text-align: center;
    clear: both;
    background-color: rgba(255,255,255,0.2);
    
    li
    {
        display: inline-block;
        padding: 5px 0;
        margin: 0 1%;
    }
    a
    {
        display: block;
        padding: 0 19px;
        height: 40px;
        line-height: 40px;
        color: white;
        text-decoration: none;
        text-shadow: 1px 1px 2px rgba(0,0,0,0.15);
        
        &:hover, &:focus
        {
            background-color: rgba(0,0,0,0.05);
        }
        &:active
        {
            background-color: rgba(0,0,0,0.1);
        }
    }
    
    & > ul > li
    {
        &.expanded > a:after
        {
            content: "";
            display: inline-block;
            width: 14px;
            height: 9px;
            vertical-align: middle;
            background: url(../img/arrow-down.svg) no-repeat center center;
            margin-left: 5px;
            margin-right: -9px;
        }
        &.open
        {
            & > a
            {
                background-color: rgba(0,0,0,0.05);
                
                &:after
                {
                    background-image: url(../img/arrow-up.svg);
                }
            }
        }
        & > ul
        {
            display: none;
            position: absolute;
            z-index: 101;
            top: 100%;
            left: 0;
            right: 0;
            background: white;
            padding: 30px 1.5%;
            text-align: left;
            box-shadow: 0 4px 4px rgba(0,0,0,0.1);
            transition: visibility 0s, opacity 0.5s;
            
            a
            {
                color: $seafoam;
                text-shadow: none;
                
                &:hover, &:focus
                {
                    background-color: rgba(0,0,0,0.025);
                }
                &:active
                {
                    background-color: rgba(0,0,0,0.05);
                }
            }
            
            & > li
            {
                float: left;
                width: 22%;
                padding: 10px 1.5%;
                margin: 0;
                
                & > a
                {
                    border-bottom: 1px solid $seafoam;
                    font-weight: bold;
                }
            }
            ul
            {
                font-weight: 400;
                
                li
                {
                    display: block;
                    margin: 0;
                }
            }
        }
    }
}
.region-navigation
{
    float: left;
    font-size: 0.888em;
    
    .block
    {
        float: left;
    }
    
    .block-content
    {
        padding: 5px 0;
        
        li
        {
            display: block;
            float: left;
            border-right: 1px solid #c6e6d0;
            
            &.last
            {
                border-right: 0;
            }
        }
        a
        {
            display: block;
            padding: 0 19px;
            height: 40px;
            line-height: 40px;
            color: white;
            text-decoration: none;
            text-shadow: 1px 1px 2px rgba(0,0,0,0.15);
            
            &:hover, &:focus
            {
                background-color: rgba(0,0,0,0.05);
            }
            &:active
            {
                background-color: rgba(0,0,0,0.1);
            }
        }
    }
}
/* ... */

